@@ -151,14 +151,18 @@ public class HintsStoreTest
         assertNull(store.getPendingHintsInfo());
 
         final long t1 = 10;
-        writeHints(directory, new HintsDescriptor(hostId, t1), 100, t1);
+        HintsDescriptor d1 = new HintsDescriptor(hostId, t1);
+        writeHints(directory, d1, 100, t1);
+        long d1Size = d1.hintsFileSize(directory);
         store = HintsCatalog.load(directory, ImmutableMap.of()).get(hostId);
-        assertEquals(new PendingHintsInfo(store.hostId, 1, t1, t1),
+        assertEquals(new PendingHintsInfo(store.hostId, 1, t1, t1, d1Size, 0, 0),
                      store.getPendingHintsInfo());
         final long t2 = t1 + 1;
-        writeHints(directory, new HintsDescriptor(hostId, t2), 100, t2);
+        HintsDescriptor d2 = new HintsDescriptor(hostId, t2);
+        writeHints(directory, d2, 100, t2);
+        long d2Size = d2.hintsFileSize(directory);
         store = HintsCatalog.load(directory, ImmutableMap.of()).get(hostId);
-        assertEquals(new PendingHintsInfo(store.hostId, 2, t1, t2),
+        assertEquals(new PendingHintsInfo(store.hostId, 2, t1, t2, d1Size + d2Size, 0, 0),
                      store.getPendingHintsInfo());
     }
 
